--- a/tonk.html
+++ b/tonk.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Custom Roblox-style Icon and Popover</title>
+  <title>Silly silly tank
+  When and what do we need it for? Nothing, but its still cool!!!
+  </title>
   <style>
     body {
       font-family: sans-serif;
@@ -11,14 +13,14 @@
     }
 
     .icon-tank-28x28 {
-      width: 28px;
-      height: 28px;
+      width: 32px;
+      height: 32px;
       background-image: url('https://upload.wikimedia.org/wikipedia/commons/3/3a/M1_Abrams_-_DVIDS.jpg');
       background-size: cover;
       background-position: center;
       display: inline-block;
       border-radius: 4px;
-      border: 1px solid #ccc;
+      border: none;
     }
 
     .popover {
@@ -58,7 +60,7 @@
 
   <div class="popover" id="popover">
     <button class="roblox-popover-close" onclick="closePopover()">×</button>
-    <p>This is a custom popover styled like Roblox's UI, with a tank icon above.</p>
+    <p>im only doing this for fun idk what im fna use it for.</p>
   </div>
 
   <script>
