--- a/tonk.html
+++ b/tonk.html
@@ -1,73 +1,32 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Silly silly tank
-  When and what do we need it for? Nothing, but its still cool!!!
-  </title>
-  <style>
-    body {
+  <meta-charset="UTF-8">
+    <title>Pro gamer transformation</title>
+    <style>
+      <body> {
       font-family: sans-serif;
-      background: #f0f0f0;
       padding: 40px;
-    }
-
-    .icon-tank-28x28 {
-      width: 32px;
-      height: 32px;
-      background-image: url('https://upload.wikimedia.org/wikipedia/commons/3/3a/M1_Abrams_-_DVIDS.jpg');
-      background-size: cover;
-      background-position: center;
-      display: inline-block;
-      border-radius: 4px;
-      border: none;
-    }
-
-    .popover {
-      position: relative;
-      width: 300px;
-      padding: 20px;
-      background: white;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      margin-top: 20px;
-    }
-
-    .roblox-popover-close {
-      position: absolute;
-      top: 8px;
-      right: 8px;
-      width: 24px;
-      height: 24px;
-      background: transparent;
-      border: none;
-      font-size: 18px;
-      font-weight: bold;
-      color: #666;
-      cursor: pointer;
-    }
-
-    .roblox-popover-close:hover {
-      color: #e33;
-    }
-  </style>
+      }
+      #output {
+        margain-top: 20px;
+        font-size: 20px;
+        color: red;
+      }
+      button {
+        padding: 10px 20px;
+        font-size: 16px;
+        cursor: pointer;
+      }
+    
+    </style>
 </head>
-<body>
-
-  <h2>Custom Tank Icon</h2>
-  <div class="icon-tank-28x28" title="Tank Icon"></div>
-
-  <div class="popover" id="popover">
-    <button class="roblox-popover-close" onclick="closePopover()">×</button>
-    <p>im only doing this for fun idk what im fna use it for.</p>
-  </div>
-
+</body>
+  <button onclick="showMessage()">Click Me</button>
+    <div id="output"></div>
   <script>
-    function closePopover() {
-      document.getElementById("popover").style.display = "none";
+    function showMessage() {
+      document.getElementById("output").textContent = "hi im such a pro gamer and now you are too!";
     }
   </script>
-
-</body>
 </html>
